letter overlapping solve

--- a/style.css
+++ b/style.css
@@ -228,7 +228,8 @@
 .instruction{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  margin-left: 20px;
+  margin-left: 50px;
+  padding-left: 10px;
   overflow: auto;
 }
 
